--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-  "cSpell.words": ["𝓐𝓹𝓹", "𝓜𝓾𝓼𝓲𝓬", "zingmp"]
+  "cSpell.words": [
+    "𝓐𝓹𝓹",
+    "cách",
+    "diện",
+    "động",
+    "Hiện",
+    "hoàn",
+    "hoạt",
+    "𝓜𝓾𝓼𝓲𝓬",
+    "nguyên",
+    "nhũng",
+    "riêng",
+    "Thêm",
+    "thông",
+    "trình",
+    "zingmp"
+  ]
 }
