--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,17 @@
     "Hiện",
     "hoàn",
     "hoạt",
+    "Kiều",
     "𝓜𝓾𝓼𝓲𝓬",
     "nguyên",
+    "Nguyễn",
     "nhũng",
+    "Ninh",
     "riêng",
     "Thêm",
     "thông",
     "trình",
+    "Trọng",
     "zingmp"
   ]
 }
